<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/cyberpunk_yellow2">

    <EditText
        android:id="@+id/newUsername"
        android:layout_width="334dp"
        android:layout_height="63dp"
        android:autofillHints="username"
        android:hint="@string/new_username"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="337dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="337dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        />


    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="337dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:autofillHints="phone"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        />


    <Button
        android:id="@+id/registerButton"
        android:layout_width="163dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#212121"
        android:text="@string/register_button1"
        android:textColor="#FFD700" />
</LinearLayout>
